Adapt splash CSS to prevent bad layout when translation causes a line-break in the splashDate

--- a/app/static/css/default.css
+++ b/app/static/css/default.css
@@ -360,7 +360,7 @@ a:active {
   padding: 1em 1em;
   max-width: 600px;
   min-width: 250px;
-  max-height: 400px;
+  height: fit-content;
   left: unset;
 }
 
@@ -376,7 +376,7 @@ a:active {
 
 #splashBodyContainer {
   padding: 0em 1em;
-  height: 45%;
+  height: 200px;
   overflow-y: auto;
   color: black;
   background-color: var(--overlayTextColor);
